<resources>
    <string name="app_name">Quiz App</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_answer">Type your answer here</string>
    <string name="label_continue">Continue</string>
    <string name="label_start_quiz">Start Quiz</string>
    <string name="label_next">Next</string>
    <string name="label_prev">Prev</string>
    <string name="label_submit">Submit</string>
    <string name="label_restart">Start New Quiz</string>
    <string name="label_email_score">Email score to me</string>
    <string name="label_email">Hello %s\n\n</string>
    <string name="level_prompt">Choose complexity level >></string>
    <string-array name="level_arrays">
        <item>Easy</item>
        <item>Medium</item>
        <item>Difficult</item>
    </string-array>
    <string name="error_name_empty">Please enter your name</string>
    <string name="error_name_invalid">This name is invalid</string>
    <string name="error_email_empty">Please enter your email</string>
    <string name="error_email_invalid">This email is invalid</string>
    <string name="info_hello">Hello, %s</string>
    <string name="info_level_chosen">You have chosen \"%s\" level for the quiz</string>
    <string name="info_rules">
            Rules of the quiz are as follows:\n
            (1) There are 7 questions in the quiz.\n
            (2) You will need to answer at least 5 correct questions in order to pass.\n
            (3) You can use PREV and NEXT buttons to navigate through the questions.\n
            (4) A "SUBMIT" button will appear on the last question, which upon clicking, will return your score.\n
            \nGOOD LUCK!
    </string>
    <string name="info_qnum">Question %d of 7</string>
    <string name="info_scores">Your score is %d / 7</string>
    <string name="info_pass">Congratulations. You have passed!</string>
    <string name="info_fail">You haven\'t passed. Better luck next time.</string>
    <string name="info_wrong_ans">Questions(s) you didn\'t answer correctly:</string>
    <string name="info_qs">QS >>&#160;&#160; %s</string>
    <string name="info_given_ans">Your answer >>&#160;&#160; %s</string>
    <string name="info_ans">Correct answer >>&#160;&#160; %s</string>
    <string name="info_toast">Check out the incorrect answers</string>
    <string name="info_not_answered">You haven\'t answered this question</string>
</resources>