<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/quiz_bg"
    tools:context="com.example.android.quizapp.QuizActivity">

    <LinearLayout
        style="@style/GEN_MatchCont_CentreH"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false" />

        <TextView
            android:id="@+id/textView_qnum"
            style="@style/textViewQNum"/>

        <TextView
            android:id="@+id/textView_question"
            style="@style/GEN_TextView"
            android:textSize="@dimen/font_large"/>

        <LinearLayout
            style="@style/GEN_MatchWidth_WrapHeight"
            android:paddingLeft="@dimen/dimen_64dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radio_group_A"
                style="@style/radioGroup" >

                <RadioButton
                    android:id="@+id/radioButton_option_1A"
                    style="@style/radioButton" />

                <RadioButton
                    android:id="@+id/radioButton_option_2A"
                    style="@style/radioButton" />

                <RadioButton
                    android:id="@+id/radioButton_option_3A"
                    style="@style/radioButton" />

                <RadioButton
                    android:id="@+id/radioButton_option_4A"
                    style="@style/radioButton" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radio_group_B"
                style="@style/radioGroup"
                android:layout_marginBottom="@dimen/dimen_100dp">

                <RadioButton
                    android:id="@+id/radioButton_option_1B"
                    style="@style/radioButton" />

                <RadioButton
                    android:id="@+id/radioButton_option_2B"
                    style="@style/radioButton" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkbox_holder"
            style="@style/checkBoxHolder">

            <CheckBox
                android:id="@+id/checkBox_option_1"
                style="@style/checkBox" />

            <CheckBox
                android:id="@+id/checkBox_option_2"
                style="@style/checkBox" />

            <CheckBox
                android:id="@+id/checkBox_option_3"
                style="@style/checkBox" />

            <CheckBox
                android:id="@+id/checkBox_option_4"
                style="@style/checkBox" />
        </LinearLayout>

        <EditText
            android:id="@+id/editText_answer"
            android:hint="@string/hint_answer"
            style="@style/viewEditText"
            android:paddingLeft="@dimen/dimen_64dp"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/rlayout_buttons"
            style="@style/GEN_MatchWidth_WrapHeight"
            android:paddingTop="@dimen/dimen_16dp"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingRight="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_5dp">

            <Button
                android:id="@+id/button_prev"
                android:text="@string/label_prev"
                style="@style/btnDarkGrey"
                android:layout_alignParentLeft="true"/>

            <Button
                android:id="@+id/button_next"
                android:text="@string/label_next"
                style="@style/btnGreen"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <Button
            android:id="@+id/button_submit"
            android:text="@string/label_submit"
            style="@style/btnProcess" />

    </LinearLayout>

</ScrollView>
